--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -9,7 +9,13 @@
     <nav>
         <ul>
             <li>
-                <a></a>
+                <a>sobre mim</a>
+            </li>
+            <li>
+                <a>projetos</a>
+            </li>
+            <li>
+                <a>contatos</a>
             </li>
         </ul>
     </nav>
