--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -23,7 +23,7 @@
     </nav>
 
     <header>
-        <img src="./img/"
+        <img src="./img/opinando jogos.png"></img>
     </header>
 </body>
 </html>
