--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -23,7 +23,9 @@
     </nav>
 
     <header>
-        <img src="./img/opinando jogos.png"></img>
+        <div>
+            <img src="./img/opinando jogos.png"></img>
+        </div>
     </header>
 </body>
 </html>
