--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>opinando jogos</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
@@ -23,9 +23,11 @@
     </nav>
 
     <header>
-        <div>
+        <div class="center">
             <img src="./img/opinando jogos.png"></img>
         </div>
+        <h1>opinando jogos</h1>
+        <h2>site em que texto jogos e dou minha opinião</h2>
     </header>
 </body>
 </html>
