--- a/index.html
+++ b/index.html
@@ -29,5 +29,14 @@
         <h1>opinando jogos</h1>
         <h2>site em que texto jogos e dou minha opinião</h2>
     </header>
+
+    <main>
+        <section>
+            <h3>sobre mim</h3>
+            <p>
+                lorem ipsum
+            </p>
+        </section>
+    </main>
 </body>
 </html>
