--- a/index.html
+++ b/index.html
@@ -31,10 +31,36 @@
     </header>
 
     <main>
-        <section>
+       <section>
             <h3>sobre mim</h3>
             <p>
-                lorem ipsum
+          Lorem ipsum dolor sit amet, consectetur adipisicing
+           elit. Aliquam ad, labore
+            earum, error alias, similique enim eaque 
+            corporis nisi sapiente officia obcaecati et
+           voluptate animi tempora laborum. Temporibus, nisi voluptatem?
+            </p>
+        </section>
+
+        <section>
+            <h3>projetos</h3>
+            <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing
+           elit. Aliquam ad, labore
+            earum, error alias, similique enim eaque 
+            corporis nisi sapiente officia obcaecati et
+           voluptate animi tempora laborum. Temporibus, nisi voluptatem?
+            </p>
+        </section>
+
+        <section>
+            <h3>contatos</h3>
+            <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing
+           elit. Aliquam ad, labore
+            earum, error alias, similique enim eaque 
+            corporis nisi sapiente officia obcaecati et
+           voluptate animi tempora laborum. Temporibus, nisi voluptatem?
             </p>
         </section>
     </main>
