--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
     </main>
     <footer>
         <a>
-            
+            <img src="./img/github.svg"></img>
+            <p>Github</p>
         </a>
     </footer>
 </body>
