--- a/index.html
+++ b/index.html
@@ -65,9 +65,19 @@
         </section>
     </main>
     <footer>
-        <a>
+        <a href="https://github.com/opinando jogos" target="_blank" rel="noopener noreferrer">  
             <img src="./img/github.svg"></img>
             <p>Github</p>
+        </a>
+
+        <a href="https://github.com/opinando jogos" target="_blank" rel="noopener noreferrer">  
+            <img src="./linkedin.svg"></img>
+            <p>Linkedin</p>
+        </a>
+
+        <a href="https://github.com/opinando jogos" target="_blank" rel="noopener noreferrer">  
+            <img src="./img/youtube.svg"></img>
+            <p>Youtube</p>
         </a>
     </footer>
 </body>
