--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <img src="./img/opinando jogos.png"></img>
             </div>
             <h1>opinando jogos</h1>
-            <h2>site em que texto jogos e dou minha opinião</h2>
+            <h2>site em que testo jogos e dou minha opinião</h2>
         </header>
     
         <main>
