--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
         <header>
             <div class="center">
-                <img src="./img/opinando jogos.png"></img>
+                <img src="./img/mine.jpeg"></img>
             </div>
             <h1>opinando jogos</h1>
             <h2>site em que testo jogos e dou minha opinião</h2>
