--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
         <header>
             <div class="center">
-                <img src="./img/mine.jpeg"></img>
+                <img src="./img/kauan.jpg"></img>
             </div>
             <h1>opinando jogos</h1>
             <h2>site em que testo jogos e dou minha opinião</h2>
@@ -69,7 +69,7 @@
             <a href="https://github.com/opinando jogos" target="_blank" rel="noopener noreferrer">  
                 <img src="./img/github.svg"></img>
                 <p>Github</p>
-            </a>
+            </a>responded
     
             <a href="https://github.com/opinando jogos" target="_blank" rel="noopener noreferrer">  
                 <img src="./linkedin.svg"></img>
