--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <p>Linkedin</p>
             </a>
     
-            <a href="https://www.youtube.com/opinando jogos" target="_blank" rel="noopener noreferrer">  
+            <a href="" target="http://www.youtube.com/@Rip_Yidrar09_blank" rel="noopener noreferrer">  
                 <img src="./img/youtube.svg"></img>
                 <p>Youtube</p>
             </a>
